ghc-4335c07/testsuite/tests/typecheck/should_run/T8739.hs
{-# LANGUAGE MagicHash #-}
module Main where
import GHC.Exts

go :: () -> Int#
go () = 0#

main = print (lazy (I# (go $ ())))


