ghc-4335c07/testsuite/tests/typecheck/should_fail/TcStaticPointersFail01.hs
{-# LANGUAGE StaticPointers   #-}

module StaticPointersFail01 where

import GHC.StaticPtr

f0 :: StaticPtr Int
f0 = static g

g :: Int -> Int
g = id
